# hackage-analyzer

./: .ghci  .gitignore  LICENSE  README.md  analyze-hackage.R  create_package_snapshot.sql  hackage-analyzer.cabal  stack.yaml
R/: analyze-hackage.R
app/: Main.hs
sql/: by_status.sql  create_build_status.sql  create_dependency.sql  create_package_snapshot.sql
src/Hackage/Scrape/: BuildStatus.hs  CompleteList.hs  Db.hs  PackageArchive.hs  PackageDetails.hs  PackageInfo.hs
vignettes/: analyse hackage snapshot.Rmd  analyse_hackage_snapshot.html
