name:                hackage-analyzer
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tkemps/hackage-analyzer#readme
license:             BSD3
license-file:        LICENSE
author:              Torsten Kemps-Benedix,
maintainer:          torsten.kemps-benedix@sks-group.eu,
copyright:           2018 Torsten Kemps-Benedix,
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.3
                     , scalpel >= 0.5.1 && < 0.6
                     , text
                     , lens
                     , template-haskell
                     , download-curl
                     , tar
                     , zlib
                     , bytestring
                     , containers
                     , haskell-src-exts
                     , aeson
                     , aeson-pretty
                     , time
                     , system-fileio
                     , system-filepath
                     , postgresql-simple
                     , optparse-applicative
                     , monad-parallel
                     , deepseq
                     , attoparsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable hackage-analyzer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hackage-analyzer
                     , protolude >= 0.1.6 && < 0.3
                     , scalpel >= 0.5.1 && < 0.6
                     , text
                     , lens
                     , template-haskell
                     , download-curl
                     , tar
                     , zlib
                     , bytestring
                     , containers
                     , haskell-src-exts
                     , aeson
                     , aeson-pretty
                     , time
                     , system-fileio
                     , system-filepath
                     , postgresql-simple
                     , optparse-applicative
                     , monad-parallel
                     , deepseq
                     , attoparsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite hackage-analyzer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hackage-analyzer
                     , protolude >= 0.1.6 && < 0.3
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/tkemps/hackage-analyzer
