name:                hackage-analyzer
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tkemps/hackage-analyzer#readme
license:             BSD3
license-file:        LICENSE
author:              Torsten Kemps-Benedix,
maintainer:          torsten.kemps-benedix@sks-group.eu,
copyright:           2018 Torsten Kemps-Benedix,
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Hackage.Scrape.CompleteList
                     , Hackage.Scrape.PackageDetails
                     , Hackage.Scrape.BuildStatus
                     , Hackage.Scrape.Db
                     , Hackage.Scrape.PackageInfo
                     , Hackage.Scrape.PackageArchive
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.3
                     , scalpel >= 0.5.1 && < 0.6
                     , text
                     , lens
                     , template-haskell
                     , download-curl
                     , tar
                     , zlib
                     , bytestring
                     , containers
                     , haskell-src-exts
                     , aeson
                     , aeson-pretty
                     , time
                     , system-fileio
                     , system-filepath
                     , postgresql-simple
                     , optparse-applicative
                     , monad-parallel
                     , deepseq
                     , attoparsec
                     , webdriver
                     , transformers-base
                     , filepath
                     , directory
                     , machines
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable hackage-analyzer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hackage-analyzer
                     , protolude >= 0.1.6 && < 0.3
                     , scalpel >= 0.5.1 && < 0.6
                     , text
                     , lens
                     , template-haskell
                     , download-curl
                     , tar
                     , zlib
                     , bytestring
                     , containers
                     , haskell-src-exts
                     , aeson
                     , aeson-pretty
                     , time
                     , system-fileio
                     , system-filepath
                     , postgresql-simple
                     , optparse-applicative
                     , monad-parallel
                     , deepseq
                     , attoparsec
                     , webdriver
                     , transformers-base
                     , machines
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/tkemps/hackage-analyzer
